before barcode scaan and after meal time done

--- a/resource/db_config.properties
+++ b/resource/db_config.properties
@@ -9,3 +9,6 @@ SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=465
 
 MAIL_FROM=coffe@dmu.edu.et
+
+STORAGE_ROOT=/root/IdeaProjects/Coffe-project/web/storage/
+STORAGE_URL_ROOT=/storage/
