before barcode scaan and after meal time done

--- a/resource/db_config.properties
+++ b/resource/db_config.properties
@@ -1,7 +1,9 @@
 DB_DRIVER=com.mysql.jdbc.Driver
-DB_URL=jdbc:mysql://localhost:3306/coffe
+DB_URL=jdbc:mysql://localhost:3306/
 DB_USERNAME=eba
 DB_PASSWORD=222222
+DB_NAME=coffe
+DB_BACKUP_DIR=~/CoffeProject/backup/
 
 SMTP_USERNAME=ee06c56209f294
 SMTP_PASSWORD=19584f9aa75801
