before barcode scaan and after meal time done

--- a/resource/db_config.properties
+++ b/resource/db_config.properties
@@ -3,7 +3,7 @@ DB_URL=jdbc:mysql://localhost:3306/
 DB_USERNAME=eba
 DB_PASSWORD=222222
 DB_NAME=coffe
-DB_BACKUP_DIR=~/CoffeProject/backup/
+DB_BACKUP_DIR=/home/oem/CoffeProject/backup/
 
 SMTP_USERNAME=ee06c56209f294
 SMTP_PASSWORD=19584f9aa75801
@@ -14,3 +14,5 @@ MAIL_FROM=coffe@dmu.edu.et
 
 STORAGE_ROOT=/root/IdeaProjects/Coffe-project/web/storage/
 STORAGE_URL_ROOT=/storage/
+
+LOG_DIR=/home/oem/CoffeProject/log/
